# tui-game

./: .gitattributes  .gitignore  AGENTS.md  API.md  Cargo.toml  MOD.md  README.md  RICH_TEXT.md  RICH_TEXT_zh_cn.md  build.rs  delete-tui-game.bat  delete-tui-game.sh  hash.py  linux-tui-game-init.sh  macos-tui-game-init.sh  pacman.lua  test_ime.py  tg-delete.bat  tg-delete.sh  ui_ehv.md  windows-tui-game-init.bat  框选logo.py
.claude/: settings.local.json
.github/workflows/: rust.yml
Linux/: delete-tui-game.sh  tg.sh  version.sh
MacOS/: delete-tui-game.sh  tg.sh  version.sh
README-i18n/: README-zh-cn.md
Windows/: tg.bat
assets/bash_lang/: en_us.json  us-en.json  zh-cn.json  zh_cn.json
assets/code_light/: javascript.json  json.json  lua.json  python.json  rust.json  shell.json  toml.json  tsx.json  typescript.json  yaml.json
assets/lang/: RICH_TEXT_COMMANDS.md  en_us.json  us-en.json  zh-cn.json  zh_cn.json
assets/language/: language_registry.json
assets/theme/: default.json
data/cache/: mod_scan_cache.json
data/log/: tui_log.txt
data/profiles/: display_state.json  package_state.json  security_state.json  terminal_profile.json
dev_docs/: ls_package.jsonc
dev_docs/en_us/: MOD.md
dev_docs/zh_cn/: API.md  BOSS.md  GAME.md  LANGUAGE.md  MOD.md  RICH_TEXT.md  SAVER.md  SCREENSAVER.md  package字段.md  test.md  上册服务缺失.md  代码规整建议.md  单人生命周期.md  底层服务缺失.md  建议服务发展顺序.md  服务通知类型.md
examples/: game.json  package.json
examples/scripts/: main.lua
office_boss/advanced_boss/: package.json
office_boss/minimal_boss/: package.json
official_game/2048/: game.json  package.json
official_game/advanced_example/: game.json  package.json
official_game/blackjack/: game.json  package.json
official_game/color_memory/: game.json  package.json
official_game/lights_out/: game.json  package.json
official_game/maze_escape/: game.json  package.json
official_game/memory_flip/: game.json  package.json
official_game/minesweeper/: game.json  package.json
official_game/minimal_example/: game.json  package.json
official_game/pacman/: game.json  package.json
official_game/rock_paper_scissors/: game.json
official_game/runtime_demo/: game.json  package.json
official_game/shooter/: game.json  package.json
official_game/sliding_puzzle/: game.json
official_game/snake/: game.json
official_game/solitaire/: game.json
official_game/sudoku/: game.json  package.json
official_game/tetris/: game.json
official_game/tic_tac_toe/: game.json
official_game/twenty_four/: game.json
official_game/wordle/: game.json
official_saver/advanced_saver/: package.json
official_saver/minimal_saver/: package.json
official_screen/advanced_screen/: package.json
official_screen/minimal_screen/: package.json
official_screensaver/advanced_screensaver/: package.json
official_screensaver/minimal_screensaver/: package.json
official_ui/: package.json
official_ui/scripts/: game_list.lua  home.lua  setting.lua
old/: lib.rs  main.rs
old/app/: content_cache.rs  i18n.rs  main_loop.rs  placeholder_pages.rs  rich_text.rs  version_check.rs
old/core/: command.rs  key.rs  runtime.rs  screen.rs
old/game/: action.rs  mod.rs  package.rs
old/lua/: engine.rs  mod.rs  sandbox.rs
old/mods/: scan.rs  (+1 more)
old_auto/: terminal_detector.rs
old_src/: main.rs
src/: lib.rs  main.rs
test_game/: game.json  package.json
test_game2/: game.json  package.json
test_package/: README.md
todo/: dir tree.md  self_todo.md  todo1.md  todo10.md  todo11.md  todo12.md  todo13.md  todo2.md  todo3.md  todo4.md  todo5.md  todo6.md  todo7.md  todo8.md  todo9.md  todo_01_基础设施.md  todo_02_终端与输入.md  todo_03_渲染与绘制.md  todo_04_UI框架.md  todo_05_包管理.md  todo_06_脚本与Lua.md  todo_07_运行时与游戏会话.md  todo_08_宿主编排与生命周期.md  todo_terminal.md
tools/: audit_package_resources.py
vue_web/: index.html
(+1200 files in other folders)
