[package]
name = "tui-game"
version = "1.0.0"
edition = "2024"
default-run = "tg"

[[bin]]
name = "tg"
path = "src/main.rs"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"

[dependencies]
arboard = { version = "3.6.1", default-features = false }
crossbeam-channel = "0.5"
crossterm = "0.29.0"
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
anyhow = "1.0.102"
unicode-width = "0.2.2"
unicode-segmentation = "1.12"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = "1.1.2+spec-1.1.0"
csv = "1.3"
quick-xml = "0.40.1"
chrono = { version = "0.4.45", default-features = true, features = ["clock"] }
rand = "0.10.1"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
base64 = "0.22"
icy_sixel = "0.5"
rdev = "0.5"
